@@ -240,6 +240,9 @@ Bug fixes
 * LUCENE-5538: Fix FastVectorHighlighter bug with index-time synonyms when the
   query is more complex than a single phrase.  (Robert Muir)
 
+* LUCENE-5544: Exceptions during IndexWriter.rollback could leak file handles
+  and the write lock. (Robert Muir)
+
 Test Framework
 
 * LUCENE-5449: Rename _TestUtil and _TestHelper to remove the leading _.
